# courses

./: .gitignore  README.md
.github/workflows/: docker-image.yml  docker-publish.yml  main.yml
fc_test/djangoProject/: db.sqlite3  docker-compose.yml  setup-docker.sh
notes/: note.txt  note2.txt  psutil_readme.txt
stepik/: hangman.py  my_first_programm.py  note.txt  project_crypt.py  project_password_generator..py
stepik/course_advanced/: main copy.ipynb  main.ipynb  test.py
stepik/course_beginner/: frage.py  note.txt  project_crypt_2.py  project_question.py
teachmeskills/: README-ru.md  README.md
teachmeskills/FastAPI_aiogram/aiogram_bot/: asgi.py  pyproject.toml  run.py  run_dev.py
teachmeskills/FastAPI_aiogram/aiogram_bot/app/: states.py
teachmeskills/FastAPI_aiogram/aiogram_bot/app/auth/: token_auth.py
teachmeskills/FastAPI_aiogram/aiogram_bot/app/handlers/: handlers.py
teachmeskills/FastAPI_aiogram/fast_api_server/: Dockerfile  database.py  db.db  main.py  pyproject.toml
teachmeskills/FastAPI_aiogram/fast_api_server/src/auth/: auth.py  schemas.py  services.py
teachmeskills/FastAPI_aiogram/fast_api_server/src/notes_web/: services.py
teachmeskills/FastAPI_aiogram/fast_api_server/templates/: base.html  index.html  login.html  note_form.html
teachmeskills/FastAPI_jinja2/: README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
teachmeskills/FastAPI_jinja2/deployment_configs/: check_and_run.sh  gunicorn.conf.py
teachmeskills/FastAPI_jinja2/static/me/css/: styles.css
teachmeskills/FastAPI_jinja2/static/me/js/: scripts.js
teachmeskills/FastAPI_jinja2/templates/: index.html
teachmeskills/cpu_usage2_DEMO_VIDEO/: README-ru.md  log_cpu_usage.txt  log_vm.txt
teachmeskills/customServer/: README-ru.md  README.md
teachmeskills/docker_django/: README-ru.md
teachmeskills/hw_05_04/: index.html  style.css
teachmeskills/hw_06_08_fast_api/: .dockerignore  alembic.ini  database.db  main.py  pyproject.toml  requirements.txt
teachmeskills/hw_06_08_fast_api/app/database/: db.py  models.py
teachmeskills/hw_06_08_fast_api/app/database/repository/: event.py  repository.py  user.py
teachmeskills/hw_06_08_fast_api/app/handlers/: events.py  routers.py  user.py
teachmeskills/hw_06_08_fast_api/app/schemas/: event.py  schemas.py  user.py
teachmeskills/hw_06_08_fast_api/app/services/: event.py  user.py
teachmeskills/hw_06_08_fast_api/fastApiProject/: README.md  database.db  database.py  main.py  models.py  pyproject.toml  temporary.py
teachmeskills/hw_06_08_fast_api/fastApiProject/migrations/: env.py
teachmeskills/hw_06_08_fast_api/fastApiProject/migrations/versions/: fbe9bd807d82_migration.py
teachmeskills/hw_06_08_fast_api/fastApiProject/src/auth/services/: auth.py  management.py
teachmeskills/hw_06_08_fast_api/fastApiProject/src/events/: router.py  schemas.py
teachmeskills/hw_06_08_fast_api/fastApiProject/src/events/services/: __init__.py  management.py  repository.py
teachmeskills/hw_06_08_fast_api/migrations/: env.py
teachmeskills/hw_07_06_sockets_AIHumanChat/: client_gpt_1.py  client_human.py  openai_chat.py  parser_hw.py  proxy_checker.py  server.py
teachmeskills/hw_09_02/: disk_monitor.py  test.ipynb
teachmeskills/hw_20_02_cpu_usage2_DEMO_VIDEO/: README.md
teachmeskills/hw_21_06_customServer/: README.md  pyproject.toml
teachmeskills/hw_21_06_customServer/src/chttp/handlers/: request_handler.py
teachmeskills/hw_21_06_customServer/src/chttp/render/: render.py
teachmeskills/hw_21_06_customServer/src/chttp/routers/: __init__.py  routers.py  urls.py
teachmeskills/hw_21_06_customServer/src/chttp/services/: exceptions.py
teachmeskills/hw_21_06_customServer/src/chttp/templates/: base.html  home.html
teachmeskills/hw_21_06_customServer/src/chttp/views/: home.py  views.py
teachmeskills/hw_22_02_parser_DEMO_VIDEO/: README-ru.md  README.md
teachmeskills/hw_24_07_docker/: README.md
teachmeskills/hw_30_01/: finding_root_num.ipynb
teachmeskills/sockets_AIHumanChat/: README-ru.md  README.md
teachmeskills/test_task_fast_api_aiogram/: README.md  docker-compose.yml
tms/: area_circle.ipynb
tms/hw_09_02/: disk_monitor.py  test.ipynb
tms/hw_1/: area_circle.ipynb
(+93 files in other folders)
