[tool.poetry]
name = "tms-fastapi"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "0.112.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "43.0.0"
distlib = "0.3.8"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.7"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
keyring = "24.3.1"
more-itertools = "10.3.0"
msgpack = "1.0.8"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pyproject-hooks = "1.1.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
rapidfuzz = "3.9.5"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
secretstorage = "3.3.3"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.37.2"
tomlkit = "0.13.0"
trove-classifiers = "2024.7.2"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
uvicorn = "0.30.5"
uvloop = "0.19.0"
virtualenv = "20.26.3"
watchfiles = "0.22.0"
websockets = "12.0"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
